end of day 4/22/15

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -95,6 +95,10 @@ body {
 .nav-tabs>li {
       float:none;
     }
+    
+.tab-pane {
+    padding: 1em;
+}    
 
 #msglog {
     //background-color: #bbb;
