--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,35 @@
+/* app css stylesheet */
+
+.menu {
+  list-style: none;
+  border-bottom: 0.1em solid black;
+  margin-bottom: 2em;
+  padding: 0 0 0.5em;
+}
+
+.menu:before {
+  content: "[";
+}
+
+.menu:after {
+  content: "]";
+}
+
+.menu > li {
+  display: inline;
+}
+
+.menu > li:before {
+  content: "|";
+  padding-right: 0.3em;
+}
+
+.menu > li:nth-child(1):before {
+  content: "";
+  padding: 0;
+}
+
+
 /*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 html {
@@ -56,35 +88,6 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-body {
-    //height: 100%;
-}
-
-#header, #footer {
-    //padding: 0.2em;
-    //color: white;
-    //background-color: gray;
-    //clear: both;
-}
-
-#left {
-    //float: left;
-    //width: 300px;
-    //height: 100%;
-    //background-color: #999;
-    //margin: 0;
-    //padding: 1em;
-}
-
-#content {
-    //height: 100%;
-    //background-color: #777;
-    //padding: 1em;
-    //margin-left: 330px;
-    //margin-right: 330px;
-}
-
 .nav-tabs {
      overflow-x: auto;
     overflow-y: hidden;
@@ -100,20 +103,9 @@ body {
     padding: 1em;
 }    
 
-#msglog {
-    //background-color: #bbb;
-    //padding: 1em;
-}
-
 .center {
     text-align: center;
-    //padding: 0px;
 }
-
-.levelup {
-    display: none;
-}
-
 
 /* ==========================================================================
    Media Queries
